<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">One.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="word">WORD</string>
    <string name="respond">RESPOND</string>
    <string name="account_exist">This Account Exists!</string>
    <string name="empty_field">Field is empty</string>

</resources>
