<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:paddingLeft="15dp"
                android:textColor="#fffdfdfe"
                android:background="#ff0070bf"
                android:textSize="80sp" />

        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:nextFocusForward="@+id/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:background="#ff0070bf"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:background="#ff538cd4"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/delete_account"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="delete account for testing"
            android:textStyle="bold"
            android:clickable="true" />

    </LinearLayout>
</LinearLayout>



